# Yandex_Trainings

./: .gitignore  README.md  pyproject.toml
Fundamentals of Algorithms Handbook/2/2.4. Stack/: A.cpp  B.py  C.py
Fundamentals of Algorithms Handbook/2/2.5 Priority Queue/: A.py
Handbook on machine learning/1/: A.py  B.py  C.py  D.py  E.py  F.py
Handbook on machine learning/2/2.1. Lineal Models/: A.py  B.py  C.py
LLM Scaling Week ШАД/: answers  answers.csv
LLM Scaling Week ШАД/Introduction/: A.py  B.py
LLM Scalling Week ШАД/: С.cpp
LMS_python/5.4/: 5.4.1.py  5.4.2.py  5.4.3.py
LMS_python/6.1/: 6.1.1.py  6.1.10.py  6.1.2.py  6.1.3.py  6.1.4.py  6.1.5.py  6.1.6.py  6.1.7.py  6.1.9.py
LMS_python/6.2/: 6.2.9.py
LMS_python/6.3/: 6.3.1.py  6.3.3.py  6.3.4.py  6.3.5.py  6.3.6.py  6.3.7.py  6.3.8.py
LMS_python/6.4/: 6.4.1.py  6.4.2.py  6.4.3.py  6.4.4.py  6.4.5.py
Trainings 8.0/: makefile
Trainings 8.0/homework_1/: A.py  B.py  C.py  G.py  H.py
Trainings 8.0/homework_2/: A.py  H.py
Trainings 8.0/homework_3/: D.py  F.py
Trainings 8.0/homework_4/: B.py  D.cpp  E.cpp
trainings 8|0/homework_1/: D.py  E.py
trainings 8|0/homework_2/: B.py  D.py  G.py
trainings 8|0/homework_3/: A.py  B.py
trainings 8|0/homework_4/: A.py  D.cpp
